[auto-verifier] docs commit 8a061dd8ed8936399ad22bc3bd4af4e51eb2bbf9

--- a/test/aoj/2444_1.test.cpp.md
+++ b/test/aoj/2444_1.test.cpp.md
@@ -6,6 +6,7 @@ data:
     title: segment_tree/segment_tree.hpp
   _extendedRequiredBy: []
   _extendedVerifiedWith: []
+  _isVerificationFailed: false
   _pathExtension: cpp
   _verificationStatusIcon: ':heavy_check_mark:'
   attributes:
