--- a/test/aoj/3117_1.test.cpp.md
+++ b/test/aoj/3117_1.test.cpp.md
@@ -6,6 +6,7 @@ data:
     title: bbst/set/merge_split_treap.hpp
   _extendedRequiredBy: []
   _extendedVerifiedWith: []
+  _isVerificationFailed: false
   _pathExtension: cpp
   _verificationStatusIcon: ':heavy_check_mark:'
   attributes:
