--- a/test/aoj/1508.test.cpp.md
+++ b/test/aoj/1508.test.cpp.md
@@ -11,18 +11,17 @@ data:
   _verificationStatusIcon: ':heavy_check_mark:'
   attributes:
     '*NOT_SPECIAL_COMMENTS*': ''
-    PROBLEM: https://judge.yosupo.jp/problem/point_add_range_sum
+    PROBLEM: https://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=1508
     links:
-    - https://judge.yosupo.jp/problem/point_add_range_sum
-  bundledCode: "#line 1 \"test/yosupo/point_add_range_sum.test.cpp\"\n#define PROBLEM\
-    \ \"https://judge.yosupo.jp/problem/point_add_range_sum\"\n\n#include <iostream>\n\
-    \n#line 1 \"bbst/avl_array.hpp\"\n\n\n\n#include <algorithm>\n#include <cassert>\n\
-    #include <optional>\n#include <utility>\n\ntemplate <class Monoid>\nstruct AVLArray\
-    \ {\n    using M = Monoid;\n    using T = typename Monoid::value_type;\n    struct\
-    \ Node {\n        T val;\n        T sum;\n        int hi;\n        int sz;\n \
-    \       Node *ch[2];\n\n        Node(const T &val = M::identity())\n         \
-    \   : val(val), sum(val), hi(1), sz(1), ch{nullptr, nullptr} {};\n    };\n\n \
-    \   Node *root;\n\n    explicit AVLArray(Node *root = nullptr) : root(root){};\n\
+    - https://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=1508
+  bundledCode: "#line 1 \"test/aoj/1508.test.cpp\"\n#define PROBLEM \"https://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=1508\"\
+    \n#include <iostream>\n\n#line 1 \"bbst/avl_array.hpp\"\n\n\n\n#include <algorithm>\n\
+    #include <cassert>\n#include <optional>\n#include <utility>\n\ntemplate <class\
+    \ Monoid>\nstruct AVLArray {\n    using M = Monoid;\n    using T = typename Monoid::value_type;\n\
+    \    struct Node {\n        T val;\n        T sum;\n        int hi;\n        int\
+    \ sz;\n        Node *ch[2];\n\n        Node(const T &val = M::identity())\n  \
+    \          : val(val), sum(val), hi(1), sz(1), ch{nullptr, nullptr} {};\n    };\n\
+    \n    Node *root;\n\n    explicit AVLArray(Node *root = nullptr) : root(root){};\n\
     \    AVLArray(const AVLArray &x) : root(x.root){};\n    AVLArray &operator=(const\
     \ AVLArray &x) {\n        root = x.root;\n        return *this;\n    };\n\n  \
     \  static int height(const Node *u) {\n        if (u == nullptr)\n           \
@@ -90,49 +89,57 @@ data:
     \ k && k < size(u));\n        if (size(u->ch[0]) == k)\n            return u->val;\n\
     \        else if (k < size(u->ch[0]))\n            return at(u->ch[0], k);\n \
     \       else\n            return at(u->ch[1], k - size(u->ch[0]) - 1);\n    };\n\
-    };\n\n\n#line 6 \"test/yosupo/point_add_range_sum.test.cpp\"\n\n#define _overload(_1,\
-    \ _2, _3, _4, name, ...) name\n#define _rep1(Itr, N) _rep3(Itr, 0, N, 1)\n#define\
-    \ _rep2(Itr, a, b) _rep3(Itr, a, b, 1)\n#define _rep3(Itr, a, b, step) for (i64\
-    \ Itr = a; Itr < b; Itr += step)\n#define repeat(...) _overload(__VA_ARGS__, _rep3,\
-    \ _rep2, _rep1)(__VA_ARGS__)\n#define rep(...) repeat(__VA_ARGS__)\n\n#define\
-    \ ALL(X) begin(X), end(X)\n\nusing namespace std;\nusing i64 = long long;\nusing\
-    \ u64 = unsigned long long;\n\nstruct Sum {\n    using T = i64;\n    using value_type\
-    \ = T;\n    static T identity() { return 0; };\n    static T operation(T lhs,\
-    \ T rhs) { return lhs + rhs; };\n};\n\nint main() {\n    cin.tie(nullptr);\n \
-    \   ios::sync_with_stdio(false);\n\n    int n, q;\n    cin >> n >> q;\n\n    AVLArray<Sum>\
-    \ arr;\n    rep(i, n) {\n        i64 a;\n        cin >> a;\n        arr.insert_at(i,\
-    \ a);\n    }\n\n    i64 com, a, b;\n    rep(_, q) {\n        cin >> com >> a >>\
-    \ b;\n        if (com == 0) {\n            arr.update_at(a, arr[a] + b);\n   \
-    \     } else if (com == 1) {\n            cout << arr.fold(a, b) << '\\n';\n \
-    \       }\n    }\n\n    return 0;\n}\n"
-  code: "#define PROBLEM \"https://judge.yosupo.jp/problem/point_add_range_sum\"\n\
+    };\n\n\n#line 5 \"test/aoj/1508.test.cpp\"\n\n#define _overload(_1, _2, _3, _4,\
+    \ name, ...) name\n#define _rep1(Itr, N) _rep3(Itr, 0, N, 1)\n#define _rep2(Itr,\
+    \ a, b) _rep3(Itr, a, b, 1)\n#define _rep3(Itr, a, b, step) for (i64 Itr = a;\
+    \ Itr < b; Itr += step)\n#define repeat(...) _overload(__VA_ARGS__, _rep3, _rep2,\
+    \ _rep1)(__VA_ARGS__)\n#define rep(...) repeat(__VA_ARGS__)\n\n#define ALL(X)\
+    \ begin(X), end(X)\n\nusing namespace std;\nusing i64 = long long;\nusing u64\
+    \ = unsigned long long;\nconstexpr i64 inf = 1ll << 60;\n\nstruct Min {\n    using\
+    \ T = i64;\n    using value_type = T;\n    static T identity() { return inf; };\n\
+    \    static T operation(T lhs, T rhs) { return min(lhs, rhs); };\n};\n\nint main()\
+    \ {\n    cin.tie(nullptr);\n    ios::sync_with_stdio(false);\n\n    i64 n, q;\n\
+    \    cin >> n >> q;\n    AVLArray<Min> arr;\n\n    rep(_, n) {\n        i64 a;\n\
+    \        cin >> a;\n        AVLArray<Min> tmp;\n        tmp.insert_at(0, a);\n\
+    \        arr.append(tmp);\n    }\n\n    i64 x, y, z;\n    rep(_, q) {\n      \
+    \  cin >> x >> y >> z;\n        switch (x) {\n            case 0: {\n        \
+    \        arr.rotate(y, z, z + 1);\n                break;\n            }\n   \
+    \         case 1: {\n                cout << arr.fold(y, z + 1) << '\\n';\n  \
+    \              break;\n            }\n            case 2: {\n                arr.erase_at(y);\n\
+    \                arr.insert_at(y, z);\n                break;\n            }\n\
+    \        }\n    }\n\n    return 0;\n}\n"
+  code: "#define PROBLEM \"https://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=1508\"\
     \n#include <iostream>\n\n#include \"../../bbst/avl_array.hpp\"\n\n#define _overload(_1,\
     \ _2, _3, _4, name, ...) name\n#define _rep1(Itr, N) _rep3(Itr, 0, N, 1)\n#define\
     \ _rep2(Itr, a, b) _rep3(Itr, a, b, 1)\n#define _rep3(Itr, a, b, step) for (i64\
     \ Itr = a; Itr < b; Itr += step)\n#define repeat(...) _overload(__VA_ARGS__, _rep3,\
     \ _rep2, _rep1)(__VA_ARGS__)\n#define rep(...) repeat(__VA_ARGS__)\n\n#define\
     \ ALL(X) begin(X), end(X)\n\nusing namespace std;\nusing i64 = long long;\nusing\
-    \ u64 = unsigned long long;\n\nstruct Sum {\n    using T = i64;\n    using value_type\
-    \ = T;\n    static T identity() { return 0; };\n    static T operation(T lhs,\
-    \ T rhs) { return lhs + rhs; };\n};\n\nint main() {\n    cin.tie(nullptr);\n \
-    \   ios::sync_with_stdio(false);\n\n    int n, q;\n    cin >> n >> q;\n\n    AVLArray<Sum>\
-    \ arr;\n    rep(i, n) {\n        i64 a;\n        cin >> a;\n        arr.insert_at(i,\
-    \ a);\n    }\n\n    i64 com, a, b;\n    rep(_, q) {\n        cin >> com >> a >>\
-    \ b;\n        if (com == 0) {\n            arr.update_at(a, arr[a] + b);\n   \
-    \     } else if (com == 1) {\n            cout << arr.fold(a, b) << '\\n';\n \
-    \       }\n    }\n\n    return 0;\n}"
+    \ u64 = unsigned long long;\nconstexpr i64 inf = 1ll << 60;\n\nstruct Min {\n\
+    \    using T = i64;\n    using value_type = T;\n    static T identity() { return\
+    \ inf; };\n    static T operation(T lhs, T rhs) { return min(lhs, rhs); };\n};\n\
+    \nint main() {\n    cin.tie(nullptr);\n    ios::sync_with_stdio(false);\n\n  \
+    \  i64 n, q;\n    cin >> n >> q;\n    AVLArray<Min> arr;\n\n    rep(_, n) {\n\
+    \        i64 a;\n        cin >> a;\n        AVLArray<Min> tmp;\n        tmp.insert_at(0,\
+    \ a);\n        arr.append(tmp);\n    }\n\n    i64 x, y, z;\n    rep(_, q) {\n\
+    \        cin >> x >> y >> z;\n        switch (x) {\n            case 0: {\n  \
+    \              arr.rotate(y, z, z + 1);\n                break;\n            }\n\
+    \            case 1: {\n                cout << arr.fold(y, z + 1) << '\\n';\n\
+    \                break;\n            }\n            case 2: {\n              \
+    \  arr.erase_at(y);\n                arr.insert_at(y, z);\n                break;\n\
+    \            }\n        }\n    }\n\n    return 0;\n}"
   dependsOn:
   - bbst/avl_array.hpp
   isVerificationFile: true
-  path: test/yosupo/point_add_range_sum.test.cpp
+  path: test/aoj/1508.test.cpp
   requiredBy: []
   timestamp: '2021-09-02 20:50:32+09:00'
   verificationStatus: TEST_ACCEPTED
   verifiedWith: []
-documentation_of: test/yosupo/point_add_range_sum.test.cpp
+documentation_of: test/aoj/1508.test.cpp
 layout: document
 redirect_from:
-- /verify/test/yosupo/point_add_range_sum.test.cpp
-- /verify/test/yosupo/point_add_range_sum.test.cpp.html
-title: test/yosupo/point_add_range_sum.test.cpp
+- /verify/test/aoj/1508.test.cpp
+- /verify/test/aoj/1508.test.cpp.html
+title: test/aoj/1508.test.cpp
 ---
