[auto-verifier] docs commit 0a75935b6f5387f91e47f77b039d958b92f2582a

--- a/test/aoj/2270.test.cpp.md
+++ b/test/aoj/2270.test.cpp.md
@@ -1,10 +1,10 @@
 ---
 data:
   _extendedDependsOn:
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: bbst/avl_set.hpp
     title: bbst/avl_set.hpp
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: bbst/persistent_avl_set.hpp
     title: bbst/persistent_avl_set.hpp
   - icon: ':heavy_check_mark:'
