--- a/test/aoj/1508.test.cpp.md
+++ b/test/aoj/1508.test.cpp.md
@@ -1,7 +1,7 @@
 ---
 data:
   _extendedDependsOn:
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: bbst/avl_array.hpp
     title: bbst/avl_array.hpp
   _extendedRequiredBy: []
