--- a/test/aoj/1418.test.cpp.md
+++ b/test/aoj/1418.test.cpp.md
@@ -4,7 +4,7 @@ data:
   - icon: ':heavy_check_mark:'
     path: math/prime_factorize_table.hpp
     title: math/prime_factorize_table.hpp
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: segment_tree/persistent_segment_tree.hpp
     title: segment_tree/persistent_segment_tree.hpp
   _extendedRequiredBy: []
