--- a/test/aoj/2270.test.cpp.md
+++ b/test/aoj/2270.test.cpp.md
@@ -1,13 +1,13 @@
 ---
 data:
   _extendedDependsOn:
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: bbst/avl_set.hpp
     title: bbst/avl_set.hpp
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: bbst/persistent_avl_set.hpp
     title: bbst/persistent_avl_set.hpp
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: tree/doubling_tree.hpp
     title: tree/doubling_tree.hpp
   _extendedRequiredBy: []
