--- a/test/aoj/3209.test.cpp.md
+++ b/test/aoj/3209.test.cpp.md
@@ -1,7 +1,7 @@
 ---
 data:
   _extendedDependsOn:
-  - icon: ':question:'
+  - icon: ':heavy_check_mark:'
     path: math/modint.hpp
     title: math/modint.hpp
   _extendedRequiredBy: []
